miscellaneous css fixes:
- fix button and form styling for consistency
- add overflow scroll to sidebar if content is too long
- include select form elements to have the same form styling
- add 'overflow: scroll' to modal

--- a/app/assets/stylesheets/express_admin/sections/_sidebar.sass
+++ b/app/assets/stylesheets/express_admin/sections/_sidebar.sass
@@ -7,6 +7,7 @@
   height: 100%
   opacity: 1
   top: 0
+  overflow: scroll
   left: 0
 
   aside
