--- a/app/assets/stylesheets/express_admin/shared/_reveal.sass
+++ b/app/assets/stylesheets/express_admin/shared/_reveal.sass
@@ -4,6 +4,8 @@ dialog, .reveal-modal
   top: 0px !important
   transition: top .25s ease
   width: 96%
+  height: 90%
+  overflow: scroll
 
   &.open
     top: 60px !important
